Correct broken CSS rule

--- a/usage/jsgui/src/main/webapp/assets/css/base.css
+++ b/usage/jsgui/src/main/webapp/assets/css/base.css
@@ -28,7 +28,7 @@
     min-height: 20px;
 }
 
-add-app .tab-content-scroller {
+.add-app .tab-content-scroller {
     overflow: auto !important;
 }
 #application-content div#details {
